# HP-Clock

./: .gitignore  CMakeLists.txt  HP Clock.atsln  main.c
HP Clock/: HP Clock.cproj  main.c
HP Clock/Libs/: RTC.c  RTC.h  bitop.h  control.c  control.h  encoder.c  encoder.h  shiftreg.c  shiftreg.h
Libs/: DHT11.c  DHT11.h  RTC.c  RTC.h  bitop.h  control.c  control.h
